--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
 
 
       <div class="row">
-        <div class="col-lg-3 col-xs-12 col-sm-12">
-          <div class="view overlay zoom wow animated slideInLeft">
+        <div class="col-lg-3 col-xs-12 col-sm-12 ">
+          <div class="view overlay zoom wow animate__animated animate__slideInLeft">
             <img src="assets/img/trek.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
             <div class="mask flex-center waves-effect waves-light overlay">
               <!-- <a href="#" class="btn btn-primary">Trekking</a> -->
@@ -259,7 +259,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 animate__animated animate__fadeInDown">
           <div class="view overlay zoom wow animated slideInLeft">
             <img src="assets/img/hill.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
             <div class="mask flex-center waves-effect waves-light overlay">
@@ -271,7 +271,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="view overlay zoom wow animated slideInRight">
+          <div class="view overlay zoom wow animate__animated animate__slideInRight">
             <img src="assets/img/roadtrip.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
             <div class="mask flex-center waves-effect waves-light overlay">
 
@@ -282,7 +282,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="view overlay zoom wow animated slideInRight">
+          <div class="view overlay zoom wow animate__animated animate__slideInRight">
             <img src="assets/img/rafting.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
             <div class="mask flex-center waves-effect waves-dark overlay">
 
@@ -296,7 +296,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
 <br><br>
 <div class="row">
   <div class="col-lg-3 col-xs-12 col-sm-12">
-    <div class="view overlay zoom wow animated slideInLeft">
+    <div class="view overlay zoom animate__animated animate__slideInLeft">
       <img src="assets/img/climbing.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
       <div class="mask flex-center waves-effect waves-light overlay">
         <!-- <a href="#" class="btn btn-primary">Trekking</a> -->
@@ -308,7 +308,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
     </div>
   </div>
   <div class="col-lg-3">
-    <div class="view overlay zoom wow animated slideInLeft">
+    <div class="view overlay zoom animate__animated animate__slideInLeft">
       <img src="assets/img/bungee.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
       <div class="mask flex-center waves-effect waves-light overlay">
 
@@ -319,7 +319,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
     </div>
   </div>
   <div class="col-lg-3">
-    <div class="view overlay zoom wow animated slideInRight">
+    <div class="view overlay zoom wow animate__animated animate__slideInRight">
       <img src="assets/img/camp.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
       <div class="mask flex-center waves-effect waves-light overlay">
 
@@ -330,7 +330,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
     </div>
   </div>
   <div class="col-lg-3">
-    <div class="view overlay zoom wow animated slideInRight">
+    <div class="view overlay zoom wow animate__animated animate__slideInRight">
       <img src="assets/img/cycling.jpeg" class="img-fluid " alt="zoom" style="height: 200px;">
       <div class="mask flex-center waves-effect waves-dark overlay">
 
@@ -778,6 +778,7 @@ longing, we manage giving the best vehicle rental assistance in India. We accept
       .catch(error => console.error('Error!', error.message))
     });
   </script>
+  
 </body>
 
 </html>
